SigmaCodebackup3rdSep/objects/Tax_Treatment__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Tax Treatments</relationshipLabel>
        <relationshipName>Tax_Treatments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrencyIsoCode__c</fullName>
        <label>Currency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Type__c</fullName>
        <label>Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Sales and Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tax Treatment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tax Treatment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Treatments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>